Fix in z-index of circle imported from timeline.scss.

--- a/_sass/_timeline.scss
+++ b/_sass/_timeline.scss
@@ -29,7 +29,7 @@
 			position: absolute;
 			left: -12px;
 			top: 8px;
-			z-index: 10;
+			z-index: 1;
         }
         
 		.content {
